Append the spinner to the beginning of the body and give it a high z-index. This fixes and issue with the current non-beta version of Wikipedia.

--- a/src/content/content.css
+++ b/src/content/content.css
@@ -3,25 +3,9 @@
    margin: -25px 0 0 -25px;
    height: 50px;
    width: 50px;
+   z-index: 10;
    text-indent: 50px;
    white-space: nowrap;
    overflow: hidden;
    background-color: #000;
-   /* -webkit-animation-name: spinnerRotate; */
-   /* -webkit-animation-duration: 2s; */
-   /* -webkit-animation-iteration-count: infinite; */
-   /* -webkit-animation-timing-function: linear; */
 }
-
-/* @-webkit-keyframes spinnerRotate { */
-/*    from { */
-/*       width: 50px; */
-/*       margin: -25px 0 0 -20px; */
-/*       -webkit-transform:rotate(0deg); */
-/*    } */
-/*    to { */
-/*       width: 50px; */
-/*       margin: -25px 0 0 -20px; */
-/*       -webkit-transform:rotate(360deg); */
-/*    } */
-/* } */
